--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="Welcome"
+            android:text="@string/welcomeIntro"
             android:textSize="30sp"
             android:textColor="#333333"/>
 
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Username"/>
+                android:hint="@string/usernameHint"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -49,7 +49,6 @@
             android:id="@+id/passwordWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/usernameWrapper"
             android:layout_marginTop="4dp">
 
             <EditText
@@ -57,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/passwordHint"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +65,7 @@
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"/>
+            android:text="@string/loginBtn"/>
 
     </LinearLayout>
 
