--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,6 +9,5 @@
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
-        android:title="@string/action_logout"
-        app:showAsAction="never" />
+        android:title="@string/action_logout" />
 </menu>
