--- a/app/src/main/res/anim/slide_out.xml
+++ b/app/src/main/res/anim/slide_out.xml
@@ -3,11 +3,12 @@
     android:fillAfter="true" >
 
 
-    <alpha
-        android:duration="1000"
-        android:fromAlpha="0.0"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:toAlpha="1.0" />
+    <translate
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="@android:integer/config_longAnimTime"
+        android:fromXDelta="0%p"
+        android:toXDelta="-100%p">
+    </translate>
 
 
     <!-- Move -->
