--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,36 +4,41 @@
     android:id="@+id/activity_splash_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/splash_login"
+
     tools:context="com.essejose.artederua.SplashScreen">
-
-    <ImageView
-        android:id="@+id/splash"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/ic_street_art"
-        android:textAlignment="center"
-
-        android:cropToPadding="false"
-        android:scaleType="fitCenter"
-        android:layout_above="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp" />
 
     <TextView
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="205dp"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
+        android:background="@color/colorTransparent"
         android:ems="10"
         android:text="@string/app_name"
-        android:textColor="#ccc"
         android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textSize="25dp"
-        android:layout_alignParentBottom="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+        android:textColor="#fff"
+        android:textSize="60sp" />
+
+    <TextView
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:background="@color/colorTransparent"
+        android:text="@string/app_sub_logo"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:layout_alignTop="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="110dp" />
+        android:layout_marginTop="60dp" />
+
 </RelativeLayout>
