--- a/app/src/main/res/layout/activity_foto.xml
+++ b/app/src/main/res/layout/activity_foto.xml
@@ -5,26 +5,58 @@
 
     <ImageView
         android:id="@+id/ivLogoEvent"
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_width="319dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/ic_menu_camera"
+        android:layout_gravity="center"
         android:scaleType="centerCrop" />
-        <LinearLayout
+
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:id="@+id/tvTituloEvent"
+            <EditText
                 android:textColor="#000"
-                android:textSize="18sp" />
-            <TextView
+                android:id="@+id/etitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvdescriptionEvent"
-                android:textColor="#555" />
+                android:hint="@string/userTitleRegister"
+                android:inputType="text" />
+
+            <EditText
+                android:textColor="#000"
+                android:id="@+id/etdescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/userDescriptionRegister"
+                android:inputType="text" />
+
+            <Button
+                android:id="@+id/btnSalve"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="0.21"
+                android:background="@color/colorPrimary"
+                android:textColor="#fff"
+                android:text="@string/salveEvent" />
+
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0.21"
+            android:background="@color/colorPrimary"
+            android:textColor="#fff"
+            android:visibility="invisible"
+            android:text="@string/deletedEvent" />
+
         </LinearLayout>
 
 </LinearLayout>
