--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,18 +9,9 @@
     tools:context="com.essejose.artederua.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/ivTest"
-        />
-
-
     <android.support.v7.widget.RecyclerView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/rvEvents"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
