--- a/app/src/main/res/layout/activity_foto.xml
+++ b/app/src/main/res/layout/activity_foto.xml
@@ -42,7 +42,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="0.21"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorCadastro"
                 android:textColor="#fff"
                 android:text="@string/salveEvent" />
 
@@ -51,14 +51,14 @@
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
             android:layout_weight="0.21"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAlert"
+            android:text="@string/deletedEvent"
             android:textColor="#fff"
-            android:visibility="invisible"
-            android:text="@string/deletedEvent" />
+            android:visibility="invisible" />
 
-        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
