--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,6 @@
             11sp
         </item>
 
-        <item name="colorAccent">#FFAB40</item>
+        <item name="colorAccent">#dc8f2d</item>
     </style>
 </resources>
