--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3e3d3d</color>
+    <color name="colorPrimaryDark">#080a15</color>
+    <color name="colorRegister">#363a4e</color>
+    <color name="colorAccent">#979193</color>
     <color name="colorTransparent">#89000000</color>
     <color name="colorLoginText">#fff</color>
+    <color name="colorAlert">#ff7171</color>
+    <color name="colorCadastro">#506e9e</color>
+
 </resources>
